--- a/config.example.ini
+++ b/config.example.ini
@@ -1,8 +1,8 @@
 [package]
 name = DS-KM package
 version = 0.0.1
-artifactId = dskm180427
-groupId = km2evens.test
+kmId = dskm180530
+organizationId = elixir-global
 description = Model translated by km2events
 
 [km]
