Example of config

--- a/config.example.ini
+++ b/config.example.ini
@@ -1,8 +1,8 @@
 [package]
 name = DS-KM package
 version = 0.0.1
-kmId = dskm180530
-organizationId = elixir-global
+kmId = name
+organizationId = org
 description = Model translated by km2events
 
 [km]
